Made the thread-checker run when building boot, bluej and greenfoot.