@@ -3,7 +3,10 @@ apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'application'
 
 dependencies {
+    annotationProcessor project(':anns-threadchecker')
     compileOnly project(':anns-threadchecker')
+    annotationProcessor project(':threadchecker')
+    compileOnly project(':threadchecker')
     implementation project(':boot')
 
     implementation 'com.google.guava:guava:17.0'
@@ -22,13 +25,20 @@ dependencies {
     implementation 'xom:xom:1.3.7'
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+        "-Xplugin:threadchecker.TCPlugin",
+        // we use some private packages/classes currently:
+        "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"]
+}
+
 repositories {
     mavenCentral()
 }
 
 javafx {
     version = "17.0.2"
-    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web']
+    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.swing', 'javafx.web']
 }
 
 task copyLibToBuild(type: Copy) {
